--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ theme: jekyll-theme-chirpy
 
 # Change the following value to '/PROJECT_NAME' ONLY IF your site type is GitHub Pages Project sites
 # and doesn't have a custom domain.
-baseurl: '/PROJECT_NAME'
+baseurl: ''
 
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
@@ -23,9 +23,7 @@ title: Marcos Ruiz                         # the main title
 tagline: Profesor en el IES Leonardo de Chabacier   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, portfolio, sidebar,
-  bootstrap Jekyll theme with responsive web design
-  and focuses on text presentation.
+  Blog personal enfocado en los ciclos de DAM, DAW, ASIR y SMR.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://marcosruiz.github.io'
