Video incrustado en la web. Se puede usar html directamente :).

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ timezone: Europe/Madrid
 
 title: Marcos Ruiz                         # the main title
 
-tagline: Profesor en el IES Leonardo de Chabacier   # it will display as the sub-title
+tagline: Trabaja duro para ser vago   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   Blog personal enfocado en los ciclos de DAM, DAW, ASIR y SMR.
