--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ google_site_verification: google_meta_tag_verification # change to your verifica
 
 
 google_analytics:
-  id: 'G-9FLYEX2BCN'              # fill in your Google Analytics ID
+  id: 'G-GS5HW4NZ8V'              # fill in your Google Analytics ID
   # Google Analytics pageviews report settings
   pv:
     proxy_endpoint:   # fill in the Google Analytics superProxy endpoint of Google App Engine
