--- a/pandoc/defaults.yaml
+++ b/pandoc/defaults.yaml
@@ -3,4 +3,4 @@ shift-heading-level-by: -1
 number-sections: true
 resource-path: ["/data/assets/img/tarea-xsl"]
 template: "eisvogel2"
-# lua-filter: "/data/pandoc/filter.lua"
+# lua-filter: "/data/pandoc/filter.lua" # Hay que meterlo como parámetro en el comando
