--- a/pandoc/defaults.yaml
+++ b/pandoc/defaults.yaml
@@ -1,5 +1,4 @@
 listings: true
 shift-heading-level-by: -1
 number-sections: true
-template: "eisvogel2.latex"
-# lua-filter: "/data/pandoc/filter.lua" # Hay que meterlo como parámetro en el comando
+template: "eisvogel"
